--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Flask
-Jinja2
-Werkzeug
-click
-itsdangerous
-MarkupSafe
-watchdog
-python-dotenv
+Flask == 2.3.2
+Jinja2 == 3.1.2
+Werkzeug == 2.3.3
+click == 8.1.3
+itsdangerous 2.1.2
+MarkupSafe == 2.1.2
+watchdog == 3.0.0
+python-dotenv == 1.0.0
 
-coverage
-sentry-sdk[flask]
+coverage == 7.2.5
+sentry-sdk[flask] == 1.22.1
