--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 fastapi = { extras = ["all"], version = "^0.101.1" }
 sentry-sdk = { extras = ["fastapi"], version = "^1.29.2" }
+sqlalchemy = { extras = ["aiosqlite"], version = "^2.0.20" }
 
 
 [build-system]
